# Q3-25-Ashutosh-Mittal

./: .gitignore
1_ts_pre/: airdrop.ts  dadadaadadadadad.ts  enroll.ts  import_export_wallet.ts  keygen.ts  package.json  transfer.ts
1_ts_pre/programs/: Turbin3_prereq.ts
2_rust_pre/: .gitignore  Cargo.toml
2_rust_pre/src/: lib.rs
3_nft_minting/: metadata.json  nft_image.ts  nft_metadata.ts  nft_mint.ts  package.json  pnpm-lock.yaml  tsconfig.json
amm/: Anchor.toml
amm/programs/amm/: Cargo.toml
capstone_project/: Readme.md
capstone_project/bhrt_token/: Anchor.toml  package.json
capstone_project/bhrt_token/programs/bhrt_token/: Cargo.toml
capstone_project/bhrt_token/programs/bhrt_token/src/: error.rs  lib.rs
capstone_project/bhrt_token/programs/bhrt_token/src/instructions/: approveMiner.rs  initialize.rs  mintNFT.rs  mod.rs  onBoardMiner.rs  onBoardMinerMint.rs  onBoardMinerNFT.rs  revoke.rs
capstone_project/bhrt_token/programs/bhrt_token/src/instructions/amm/: ammInitialize.rs  deposit.rs  initialize.rs  mod.rs  swap.rs  withdraw.rs
capstone_project/bhrt_token/programs/bhrt_token/src/state/: mod.rs
capstone_project/bhrt_token/tests/: bhrt_token.ts
capstone_project/nft_mint_miner/: Anchor.toml
capstone_project/stablecoin/: Anchor.toml
capstone_project/stablecoin/tests/: stablecoin.ts
dice/: Anchor.toml
dice/programs/dice/: Cargo.toml
escrow/: Anchor.toml
escrow/tests/: escrow.ts
stablecoin/bhrt_token/: Anchor.toml  extensions.list
stablecoin/nft_mint_miner/: package.json
stablecoin/token/: Anchor.toml
vault/: Anchor.toml
(+43 files in other folders)
