[package]
name = "bhrt_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bhrt_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.31.1", features = ["metadata"] }
mpl-token-metadata = "5.1.0"
# solana-program = "2.3.0"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git"}
spl-tlv-account-resolution = "0.11.0"
spl-transfer-hook-interface = "0.10.0"
spl-type-length-value = "0.9.0"
spl-pod = "0.7.1"